# running_robot_2022

./: .gitignore  README.md  env.ps1  pyproject.toml  requirements.txt
animations/: TimonsRolle.motion
behavior_clone/: darwin_inference.py  darwin_recorder.py  model.py  train.py
behavior_clone/utils/: transforms.py  utils.py  viz.py
behavior_clone/utils/datasets/: dataset.py
nn_gaze_synthesis/: model.py  predict.py  test.py  train.py
nn_gaze_synthesis/utils/: dataset.py  transforms.py  utils.py  viz.py
nn_gaze_synthesis/utils/datasets/: ego4d.py  pupilcore.py
