[tool.poetry]
name = "nn-gaze-synthesis"
version = "0.1.0"
description = ""
authors = ["Florian Vahl <florian@flova.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
tqdm = "^4.64.0"
numpy = "^1.22.3"
torchvision = "^0.12.0"
opencv-python = "^4.5.5"
torch-summary = "^1.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
