[tool.poetry]
name = "behavior_clone"
version = "0.1.0"
description = ""
authors = ["Florian Vahl <florian@flova.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.11.0"
tqdm = "^4.64.0"
numpy = "^1.22.3"
torchvision = "^0.12.0"
opencv-python = "^4.5.5"
profilehooks = "^1.12.0"
torchinfo = "^1.6.5"
msgpack = "^1.0.4"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
